--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "newfolder",
+  "name": "mongodbtroble",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,20 +12,19 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cryptr": "^6.0.3",
-    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.6",
-    "mongoose-sequence": "^5.3.1"
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
+    "mongodb": "^4.7.0",
+    "mongoose": "^6.4.0",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-sequence": "^5.3.1",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.7.1",
+    "winston-telegram": "^2.6.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xoxokss/7weekDanggeunClone.git"
-  },
-  "bugs": {
-    "url": "https://github.com/xoxokss/7weekDanggeunClone/issues"
-  },
-  "homepage": "https://github.com/xoxokss/7weekDanggeunClone#readme",
   "description": ""
 }
