--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.4.0",
-    "mongoose-sequence": "^5.3.1"
+    "mongoose-sequence": "^5.3.1",
+    "socket.io": "^4.5.1"
   },
   "repository": {
     "type": "git",
