--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "mongoose": "^6.4.0",
     "mongoose-sequence": "^5.3.1",
     "socket.io": "^4.5.1"
